<resources>
    <string name="app_name">Bankairos</string>
    <string name="nav_header_title">Jesus Rosas</string>
    <string name="nav_header_subtitle">jesusrosas@kairosds.com</string>
    <string name="nav_header_desc">Cabecera de navegación</string>
    <string name="action_settings">Configuraciones</string>

    <string name="menu_wallet">Mis cuentas</string>
    <string name="menu_add_card">Solicitar tarjeta</string>
    <string name="menu_exit">Cerrar sesión</string>
    <string name="location">Ciudad de México, Venustiano Carranza</string>
    <string name="tdc">TDC</string>
    <string name="type_card">Tarjeta</string>
    <string name="type">Tipo</string>

    <string name="error_empty_field">Campo vacío</string>
    <string name="password_does_not_mach">Contraseña no coincide</string>
    <string name="email_error">Introduzca correo válido</string>
    <string name="password_login_error">Contraseña incorrecta, intenta de nuevo</string>
    <string name="email_login_error">Correo incorrecto, intenta de nuevo</string>

    <string name="login_password">Contraseña</string>
    <string name="login_email">Correo electrónico</string>
    <string name="login_register">Registrar</string>
    <string name="login_go_to">Ir a</string>
    <string name="login_btn">Ingresar</string>
    <string name="login_link">Ingresa con otra cuenta</string>
    <string name="login_link_register">Regístrate</string>
    <string name="login_question">¿Aún no te registras?</string>
    <string name="register_question">¿Ya tienes una cuenta?</string>
    <string name="register_login">Ingresar</string>
    <string name="register_name">Nombre(s)</string>
    <string name="register_password">Contraseña</string>
    <string name="register_confirm_password">Confirmar contraseña</string>
    <string name="register_last_names">Apellidos</string>
    <string name="register_btn">Registrar</string>
    <string name="nav_header_welcome">Bienvenido: %s</string>
    <string name="no_cards_msg">No hay tarjetas registradas</string>
    <string name="select_card">Selecciona tarjeta…</string>
    <string name="select_type_card">Selecciona tipo de tarjeta…</string>

    <string name="options_gold_card">Tarjeta oro</string>
    <string name="premium_card">Tarjeta premium</string>
    <string name="options_black_card">Tarjeta black</string>
    <string name="request_card">Solicitar</string>
    <string name="dialog_confirm">Aceptar</string>
    <string name="time_format">00:00</string>
</resources>