<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="vm"
            type="com.jesusrosas.kairosds.bankairos.ui.baseform.viewmodel.BaseFormViewModel" />

        <import type="com.jesusrosas.kairosds.bankairos.ui.baseform.SuccessStyles" />

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:padding="@dimen/common_default">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login_email"
            app:endIconMode="clear_text"
            errorMessage="@{vm.emailError}"
            successStyle="@{SuccessStyles.Green}"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:text="@={vm.email}"
                onTextChanged="@{(value) -> vm.emailChanged(value)}"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/common_default"
            android:hint="@string/login_password"
            errorMessage="@{vm.passwordError}"
            successStyle="@{SuccessStyles.Orange}"
            app:endIconMode="password_toggle"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                onTextChanged="@{(value) -> vm.passwordChanged(value)}"
                android:text="@={vm.password}"
                android:imeOptions="actionDone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:layout_marginTop="32dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_question"
                style="@style/TextBlackSmall" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login_go_to"
                    android:layout_marginEnd="4dp"
                    style="@style/TextBlackSmall"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login_register"
                    android:onClick="@{() -> vm.changeForm(@string/login_register)}"
                    style="@style/TextOrangeSmallBold"/>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
</layout>