<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="vm"
            type="com.jesusrosas.kairosds.bankairos.ui.account.AccountViewModel" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:weightSum="2">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@color/light_gray"
                android:layout_weight="1"
                android:layout_marginTop="@dimen/common_default"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/type_card"
                    android:layout_marginHorizontal="@dimen/common_big"
                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
                    android:gravity="center" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
                    android:text="@string/type"
                    android:layout_marginHorizontal="@dimen/common_big"
                    android:textAlignment="center"
                    android:gravity="center" />

            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                cardList="@{vm.cardList}"
                isLoading="@{vm.isLoading}"
                android:layout_weight="1"
                android:background="@color/light_gray"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scrollbars="vertical"
                android:padding="@dimen/common_default" />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline3"
            android:text="@string/no_cards_msg"
            android:background="@color/light_gray"
            android:paddingVertical="@dimen/common_max"
            setVisible="@{vm.isMsgVisible}"/>

    </RelativeLayout>
</layout>