<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="vm"
            type="com.jesusrosas.kairosds.bankairos.ui.account.AccountViewModel" />

        <import type="com.jesusrosas.kairosds.bankairos.CardDropDownStyle" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingVertical="@dimen/common_big">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilCardName"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/common_min"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <AutoCompleteTextView
                options="@{vm.cardOptions}"
                onItemClickListener="@{vm}"
                function="@{CardDropDownStyle.Names}"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/select_card"
                android:inputType="none"
                android:textColor="@color/primaryTextColor" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/common_default"
            app:layout_constraintTop_toBottomOf="@id/tilCardName"
            app:layout_constraintStart_toStartOf="parent">

            <AutoCompleteTextView
                options="@{vm.cardTypes}"
                onItemClickListener="@{vm}"
                function="@{CardDropDownStyle.Types}"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/select_type_card"
                android:inputType="none"
                android:textColor="@color/primaryTextColor" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/common_middle"
            android:layout_marginHorizontal="@dimen/common_default"
            android:text="@string/request_card"
            android:enabled="@{vm.isBtnEnabled}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            style="@style/OutlinedButton" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>