<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.onboarding.OnBoardingFragment">

    <data>
        <variable
            name="vm"
            type="com.jesusrosas.kairosds.bankairos.ui.onboarding.OnBoardingViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/glVertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/glHorizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.60" />

        <ImageView
            android:id="@+id/ivLogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/nav_header_height"
            android:src="@drawable/logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/ivBrand"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/common_middle"
            android:src="@drawable/logo_text_kairos_white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ivLogo"
            tools:ignore="ContentDescription" />

        <TextView
            style="@style/TextAppearance.MaterialComponents.Headline5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{vm.text}"
            android:layout_marginBottom="@dimen/common_max"
            app:layout_constraintBottom_toTopOf="@id/glHorizontal"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ivBrand"
            tools:text="@string/nav_header_welcome"/>

        <TextView
            android:id="@+id/tvLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_btn"
            android:textColor="@color/primaryColor"
            app:layout_constraintEnd_toStartOf="@id/glVertical"
            app:layout_constraintHorizontal_bias="0.9"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/glHorizontal"
            android:onClick="@{() -> vm.goToFormClicked(@string/register_login)}"
            style="@style/TextAppearance.MaterialComponents.Body1" />

        <View
            android:id="@+id/vDivider"
            android:layout_width="@dimen/divider_width"
            android:layout_height="@dimen/common_middle"
            android:background="@color/primaryColor"
            app:layout_constraintEnd_toStartOf="@+id/glVertical"
            app:layout_constraintStart_toStartOf="@+id/glVertical"
            app:layout_constraintTop_toBottomOf="@+id/glHorizontal" />

        <TextView
            android:id="@+id/tvRegister"
            android:onClick="@{() -> vm.goToFormClicked(@string/login_register)}"
            style="@style/TextAppearance.MaterialComponents.Body1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.1"
            app:layout_constraintStart_toStartOf="@+id/glVertical"
            app:layout_constraintTop_toBottomOf="@+id/glHorizontal" />

        <TextView
            android:id="@+id/tvLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{vm.location}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/glHorizontal"
            app:layout_constraintVertical_bias="0.85" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>